# Para_Estudos

./: docker-compose.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_12_09_2315-f4b791ec6589_initial_migration.py  2025_12_09_2321-13fcea2e38fe_initial_migration.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  post.py  user.py
backend/app/routers/: __init__.py  auth.py  posts.py  users.py
backend/app/schemas/: __init__.py  auth.py  post.py  user.py
backend/app/services/: __init__.py  auth_service.py  post_service.py  user_service.py
backend/app/utils/: dependencies.py  security.py
backend/tests/: __init__.py  test_auth.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/common/: Button.tsx  Card.tsx  Input.tsx
frontend/src/components/features/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/features/posts/: PostCard.tsx  (+2 more)
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts  useLocalStorage.ts  usePosts.ts
frontend/src/pages/: Dashboard.tsx  Home.tsx  Login.tsx  NotFound.tsx  Register.tsx
frontend/src/routes/: ProtectedRoute.tsx  PublicRoute.tsx  index.tsx
frontend/src/services/: api.ts  authService.ts  postService.ts  userService.ts
frontend/src/types/: auth.ts  post.ts  user.ts
frontend/src/utils/: constants.ts  helpers.ts
